fix(viewer): set z-index on mobile sidebar to render above photo

--- a/static/css/responsive.css
+++ b/static/css/responsive.css
@@ -166,6 +166,7 @@
 
   .viewer-sidebar {
     position: absolute;
+    z-index: 15;
     bottom: 0;
     left: 0;
     right: 0;
